--- a/css/styles.css
+++ b/css/styles.css
@@ -657,17 +657,23 @@ body {
 
 .subscribe-content {
     margin-left: 80px;
-    display: flex;
+    flex-direction: column;
+        align-items: flex-start;
+   
 }
+
+
 .footer-input {
 display: flex;
-flex-direction: column;
-gap: 16px;
+
+
 
 
 }
 
 .form-subscribe {
+    display: flex;
+    gap: 24px;
     
 
 }
@@ -678,7 +684,13 @@ gap: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #fff;
+        margin-bottom: 16px;
         
+}
+
+.label-subscribe {
+    display: none;
+    
 }
 
 .inpute-subscribe {
@@ -689,24 +701,34 @@ gap: 16px;
         border-radius: 4px;
         width: 264px;
         height: 40px;
-        
+        font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
         padding-left: 16px;
+        
 }
 
 .inpute-subscribe::placeholder {
-font-weight: 400;
+    font-weight: 400;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
     color: #fff;
 }
 
+
+
+
 .subscibe-btn {
+    cursor: pointer;
 background-color: #4d5ae5;
 border-radius: 4px;
 padding: 8px 24px;
- width: 165px;
+min-width: 165px;
 height: 40px;
+font-family: "Roboto", sans-serif;
 font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -718,10 +740,9 @@ font-weight: 500;
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 18px;
+        
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-       margin-left: 24px;
-       margin-top: 40px;
+       
         
        
 }
@@ -734,6 +755,7 @@ background: #404bbf;
 
 .icon-subskribe {
     fill: #fff;
+    margin-left: 16px;
 }
 
 
@@ -750,7 +772,7 @@ background: #404bbf;
     visibility: hidden;
     pointer-events: none;
     z-index: 999;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); visibility: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 }
@@ -775,21 +797,23 @@ background: #404bbf;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btm {
 position: absolute;
 outline: none;
 top: 24px;
-right: 31px;
+right: 24px;
 width: 24px;
 height: 24px;
-border-radius: 100%;
+border-radius: 50%;
+padding: 0;
 background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close {
@@ -801,7 +825,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-close-btm:focus {
     background-color: #404bbf;
     
-    border-color: #404bbf;
+    border: none;
 }
 
 
@@ -823,11 +847,12 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        margin-bottom: 16px;
         
 }
 
 .modal-wrapper {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .modal-label {
@@ -836,6 +861,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 1.16667;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    line-height: 1.17;
+    display: block;
+    margin-bottom: 4px;
 }
 
 .modal-fielf {
@@ -850,6 +878,8 @@ height: 40px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 border-radius: 4px;
 padding-left: 38px;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 input {
@@ -862,8 +892,10 @@ input {
    position: absolute;
    pointer-events: none; 
    left: 16px;
-   top: 8px;
+   top: 50%;
+   transform: translateY(-50%);
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-fielf:hover,
@@ -885,14 +917,23 @@ outline: none;
 
 
 .modal-textarea {
-    border: 1px solid rgba(46, 47, 66, 0.4);
+    
         border-radius: 4px;
-        width: 360px;
+        width: 100%;
         height: 120px;
-        padding-left: 16px;
-        padding-top: 8px;
+        padding: 8px 16px;
         background-color: transparent;
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px; 
+        outline: transparent;
+
+
+
 }
 .modal-textarea:hover,
 .modal-textarea:focus {
@@ -962,7 +1003,7 @@ margin: auto;
 display: flex;
 align-items: center;
 justify-content: center;
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-submit-btm:hover,
 .modal-submit-btm:focus {
