--- a/css/styles.css
+++ b/css/styles.css
@@ -852,7 +852,10 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-wrapper {
-    margin-bottom: 16px
+    margin-bottom: 8px;
+}
+.modal-wrapper-textarea {
+    margin-bottom: 16px;
 }
 
 .modal-label {
@@ -959,19 +962,21 @@ outline: none;
 }
 
 .modal-check {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    fill: transparent;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 16px;
     height: 16px;
 border-radius: 2px;
-border: 1px solid rgba(46, 47, 66, 0.4);
+
 margin-right: 8px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-fill: transparent; 
+ 
 }
 
-.checkbox-input:checked~.modal-label-accept .modal-check {
+#user-privacy:checked+label .modal-check {
 background-color: #404bbf;
 border: none;
 fill: #F4F4FD;
