--- a/css/styles.css
+++ b/css/styles.css
@@ -852,10 +852,10 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-wrapper {
-    margin-bottom: 8px;
+margin-bottom: 8px;
 }
 .modal-wrapper-textarea {
-    margin-bottom: 16px;
+margin-bottom: 16px;
 }
 
 .modal-label {
@@ -962,21 +962,19 @@ outline: none;
 }
 
 .modal-check {
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    fill: transparent;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
     width: 16px;
     height: 16px;
-border-radius: 2px;
-
-margin-right: 8px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: transparent;
 }
 
-#user-privacy:checked+label .modal-check {
+
+.checkbox-input:checked + .modal-label-accept > .modal-check  {
 background-color: #404bbf;
 border: none;
 fill: #F4F4FD;
