add-check-focus

--- a/css/styles.css
+++ b/css/styles.css
@@ -970,7 +970,7 @@ outline: none;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    color: transparent;
+    fill: transparent;
 }
 
 
